# nilscript

./: .gitignore  CHANGELOG.md  CITATION.cff  IMPLEMENTATIONS.md  README.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  spec-question.yml
.github/workflows/: ci.yml  parity.yml
bench/: README.md
bench/conformance/: test_admission_gates.py  test_invariants.py
bench/core/: chart.py  gate.py  report.py
bench/safety/: injecagent_runner.py  matrix.json
demo/: README.md  agent_demo.py  demo_ui.py  prove_live_link.py  run_auth_shim.py  run_live_shim.py
deploy/: Dockerfile.controlplane  Dockerfile.mcp
docs/: HANDOFF.md  NIL-paper-additions.md  NIL-structural-integrity-report.md  PLAN-adapter-data-plane.md  PLAN-cycle-ast-ssot.md  PLAN-nil-intent.md  adapter-ecosystem-strategy.md  adapter-toolkit-plan.md  benchmarking-plan.md  connect-claude.md  contributing-an-adapter.md  reference-legibility.md  saas-grade-content-plan.md  seqrd-pc-v0.3-design.md
docs/brand/: messaging.md
docs/plans/: governance-control-plane.md  mcp-multitenancy.md
examples/pocketbase-adapter/: README.md
examples/pocketbase-adapter/src/pocketbase_nil_adapter/: edge.py  system.py
scripts/: parity.sh  smoke_automation.py
src/nilscript/: __init__.py  durable.py  durable_temporal.py
src/nilscript/automation/: __init__.py  authoring.py  compose.py  dispatch.py  models.py  scheduler.py  skeleton.py  triggers.py
src/nilscript/channels/: __init__.py
src/nilscript/channels/whatsapp/: __init__.py  client.py  config.py  errors.py  naming.py
src/nilscript/cli/: __init__.py  adapters.py
src/nilscript/cli/conformance/: __init__.py
src/nilscript/cli/manifest/: __init__.py
src/nilscript/cli/scaffold/: __init__.py  _models.py  _templates.py  _translate.py
src/nilscript/cli/scan/: __init__.py  inference.py
src/nilscript/controlplane/: __init__.py  app.py  store.py
src/nilscript/cycle/: __init__.py  authoring.py  compile.py  hash.py  lsp.py  models.py
src/nilscript/dataplane/: __init__.py  bulk.py  engine.py  export.py  intent.py  router.py
src/nilscript/demo/: demo_ui.py  run_odoo_shim.py
src/nilscript/demo/pocketbase_nil_adapter/: edge.py
src/nilscript/docs/: backend-conformance.md  translation-shim-guide.md
src/nilscript/kernel/: prerequisites.py
src/nilscript/mcp/: SKILL.md  app.py  auth.py  automation_tools.py  brain_tools.py  dynamic.py  registry.py  server.py  skill.py  tenant.py  tools.py
src/nilscript/nil/schemas/0.1/: read-plane.schema.json
src/nilscript/sdk/: __init__.py  connect.py  legibility.py  sentences.py
src/nilscript/sdk/spec/0.1/profiles/resource-v1/: create.json  delete.json  read.json  update.json
tests/: test_automation.py  test_automation_api.py  test_automation_compose.py  test_automation_compose_api.py  test_automation_dispatch.py  test_automation_scheduler.py  test_automation_ui.py  test_cli_adapters.py  test_cli_toolkit.py  test_controlplane.py  test_cp_provisioning.py  test_cycle_ast.py  test_cycle_lsp.py  test_cycle_registry.py  test_dataplane_bulk.py  test_dataplane_cap.py  test_dataplane_engine.py  test_dataplane_export.py  test_dataplane_filter.py  test_dataplane_projection.py  test_demo_owner_gate.py  test_durable_temporal.py  test_intent_reads.py  test_intent_router.py  test_legibility.py  test_manifest.py  test_manifest_consumption.py  test_mcp_automation_tools.py  test_mcp_brain_tools.py  test_mcp_dynamic.py  test_mcp_http_e2e.py  test_mcp_multitenant.py  test_mcp_registry.py  test_mcp_server.py  test_mcp_tenant.py  test_mcp_tools.py  test_multi_adapter.py  test_prerequisites.py  test_saas_tenant_management.py  test_scaffold.py  (+5 more)
